A lot changes NGL