@@ -8,78 +8,79 @@ import com.example.ticketbooking.entity.User;
 import com.example.ticketbooking.repository.BookingRepository;
 import com.example.ticketbooking.repository.EventRepository;
 import com.example.ticketbooking.repository.UserRepository;
-import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class BookingService {
-    private final BookingRepository bookingRepository;
-    private final EventRepository eventRepository;
-    private final UserRepository userRepository;
-    
-    @Transactional
-    public BookingResponseDTO createBooking(Long userId, BookingRequestDTO request) {
+    private static final Logger logger = LoggerFactory.getLogger(BookingService.class);
+
+    @Autowired
+    private BookingRepository bookingRepository;
+
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private EventRepository eventRepository;
+
+    public BookingResponseDTO createBooking(BookingRequestDTO requestDTO, Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Pengguna tidak ditemukan"));
-        
-        Event event = eventRepository.findById(request.getEventId())
-                .orElseThrow(() -> new RuntimeException("Acara tidak ditemukan"));
-        
-        if (event.getAvailableSeats() < request.getNumberOfTickets()) {
-            throw new RuntimeException("Kursi yang tersedia tidak cukup");
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        Event event = eventRepository.findById(requestDTO.getEventId())
+                .orElseThrow(() -> new IllegalArgumentException("Event not found"));
+
+        if (event.getAvailableSeats() < requestDTO.getNumberOfTickets()) {
+            throw new IllegalArgumentException("Not enough available seats");
         }
-        
-        // Update jumlah kursi yang tersedia
-        event.setAvailableSeats(event.getAvailableSeats() - request.getNumberOfTickets());
-        eventRepository.save(event);
-        
-        // Buat pemesanan
+
         Booking booking = new Booking();
-        booking.setBookingReference(generateBookingReference());
         booking.setUser(user);
         booking.setEvent(event);
-        booking.setNumberOfTickets(request.getNumberOfTickets());
-        booking.setTotalAmount(event.getPrice().multiply(BigDecimal.valueOf(request.getNumberOfTickets())));
+        booking.setNumberOfTickets(requestDTO.getNumberOfTickets());
+        booking.setTotalAmount(
+                event.getPrice().multiply(java.math.BigDecimal.valueOf(requestDTO.getNumberOfTickets())));
         booking.setStatus(Booking.BookingStatus.CONFIRMED);
-        
-        booking = bookingRepository.save(booking);
-        
-        return mapToResponseDTO(booking);
+        booking.setBookingReference(generateBookingReference());
+
+        event.setAvailableSeats(event.getAvailableSeats() - requestDTO.getNumberOfTickets());
+        eventRepository.save(event);
+        bookingRepository.save(booking);
+
+        return mapToDto(booking);
     }
-    
+
+    @Transactional(readOnly = true)
     public List<BookingResponseDTO> getUserBookings(Long userId) {
-        return bookingRepository.findByUserId(userId).stream()
-                .map(this::mapToResponseDTO)
-                .toList();
+        logger.info("Fetching bookings for userId: {}", userId);
+        List<Booking> bookings = bookingRepository.findByUser_Id(userId);
+        if (bookings.isEmpty()) {
+            logger.info("No bookings found for userId: {}", userId);
+            return Collections.emptyList();
+        }
+        return bookings.stream().map(this::mapToDto).collect(Collectors.toList());
     }
-    
-    public BookingResponseDTO getBookingByReference(String reference) {
-        Booking booking = bookingRepository.findByBookingReference(reference)
-                .orElseThrow(() -> new RuntimeException("Pemesanan tidak ditemukan"));
-        return mapToResponseDTO(booking);
-    }
-    
-    private String generateBookingReference() {
-        return "BK-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
-    }
-    
-    private BookingResponseDTO mapToResponseDTO(Booking booking) {
+
+    private BookingResponseDTO mapToDto(Booking booking) {
         BookingResponseDTO dto = new BookingResponseDTO();
-        dto.setId(booking.getId());
         dto.setBookingReference(booking.getBookingReference());
         dto.setEventTitle(booking.getEvent().getTitle());
         dto.setVenue(booking.getEvent().getVenue());
         dto.setEventDate(booking.getEvent().getEventDate());
         dto.setNumberOfTickets(booking.getNumberOfTickets());
-        dto.setTotalAmount(booking.getTotalAmount());
-        dto.setStatus(booking.getStatus().name());
-        dto.setBookingDate(booking.getBookingDate());
+        dto.setTotalAmount(booking.getTotalAmount() != null ? booking.getTotalAmount().doubleValue() : null);
+        dto.setStatus(booking.getStatus() != null ? booking.getStatus().toString() : null);
         return dto;
+    }
+
+    private String generateBookingReference() {
+        return "BK" + System.currentTimeMillis();
     }
 }
